# kivymd-lazy-loading-template

./: .gitignore  LICENSE  README.md  buildozer.spec  main.py  pyproject.toml  requirements.txt  screens.json  setup.py
.github/workflows/: build.yaml  tests.yaml
assets/: screens.json
libs/applibs/: connection_manager.py  utils.py
libs/uix/: android_permissions.py  optimised_root.c  optimised_root.pyx  root.py
libs/uix/baseclass/components/: permission_denied_popup.py
libs/uix/baseclass/screens/: auth_screen.py  camera.py  graphs.py  home_screen.py  network.py  settings_screen.py  welcome.py
libs/uix/kv/screens/: auth_screen.kv  camera.kv  graphs.kv  home.kv  home_screen.kv  network.kv  settings.kv  settings_screen.kv  welcome.kv
libs/uix/root/: root.pyx  setup.py
libs/uix/screens/: welcome.py
src/: buildozer.spec  main.py
src/assets/: screens.json
src/libs/applibs/services/: generated_connection_manager.py
src/libs/uix/: root.py  setup.py
src/libs/uix/kv/screens/: calling.kv  home.kv  messaging.kv  welcome.kv
src/libs/uix/screens/: calling.py  home.py  messaging.py  settings.py  welcome.py
src/my_android/: permissions.py  phone_call.py
test_app/: main.py
tests/: loading_screen.profile  myapp.profile  readprofile.py  test_welcome_screen.py
